[gd_scene load_steps=40 format=3 uid="uid://bsndc66cvpkpj"]

[ext_resource type="Script" path="res://Units/unit.gd" id="1_hk70y"]
[ext_resource type="PackedScene" uid="uid://dl6x5ghpq2vt2" path="res://Hitboxes Hurtboxes/hitbox.tscn" id="2_lc3d3"]
[ext_resource type="Texture2D" uid="uid://d1i8vmdivt6kd" path="res://Units/selected.png" id="3_lgoqh"]
[ext_resource type="Texture2D" uid="uid://befgf46dpa4ot" path="res://icon.svg" id="4_ekhfc"]
[ext_resource type="Texture2D" uid="uid://bqeq8xm4ggu3e" path="res://UI/Light.png" id="5_ax1vy"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kysj6"]
light_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xvig"]
size = Vector2(25, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b64xe"]
size = Vector2(25, 35)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pa6rk"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rnmax"]
light_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_7gm4p"]
atlas = ExtResource("3_lgoqh")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_itot3"]
atlas = ExtResource("3_lgoqh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ft85"]
atlas = ExtResource("3_lgoqh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mken"]
atlas = ExtResource("3_lgoqh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpi3s"]
atlas = ExtResource("3_lgoqh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7eqf"]
atlas = ExtResource("3_lgoqh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jent"]
atlas = ExtResource("3_lgoqh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x6ya"]
atlas = ExtResource("3_lgoqh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2erts"]
atlas = ExtResource("3_lgoqh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eia7l"]
atlas = ExtResource("3_lgoqh")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bumg2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gm4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itot3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ft85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mken")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpi3s")
}],
"loop": false,
"name": &"deselect",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7eqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jent")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x6ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2erts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eia7l")
}],
"loop": false,
"name": &"select",
"speed": 30.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_24vj4"]
light_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_v08kv"]
atlas = ExtResource("4_ekhfc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncocy"]
atlas = ExtResource("4_ekhfc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p631"]
atlas = ExtResource("4_ekhfc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lln64"]
atlas = ExtResource("4_ekhfc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgymy"]
atlas = ExtResource("4_ekhfc")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmtp4"]
atlas = ExtResource("4_ekhfc")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljhm4"]
atlas = ExtResource("4_ekhfc")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cipgo"]
atlas = ExtResource("4_ekhfc")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mdho"]
atlas = ExtResource("4_ekhfc")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlouc"]
atlas = ExtResource("4_ekhfc")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1eii"]
atlas = ExtResource("4_ekhfc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2icv"]
atlas = ExtResource("4_ekhfc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ba0q"]
atlas = ExtResource("4_ekhfc")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuahh"]
atlas = ExtResource("4_ekhfc")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhnpo"]
atlas = ExtResource("4_ekhfc")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxnd3"]
atlas = ExtResource("4_ekhfc")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_swex3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v08kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncocy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p631")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lln64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgymy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmtp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljhm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cipgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mdho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlouc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1eii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2icv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ba0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuahh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhnpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxnd3")
}],
"loop": true,
"name": &"new_animation_1",
"speed": 5.0
}]

[node name="Unit" type="CharacterBody2D" groups=["Unit"]]
material = SubResource("CanvasItemMaterial_kysj6")
collision_layer = 0
script = ExtResource("1_hk70y")

[node name="Hitbox" parent="." instance=ExtResource("2_lc3d3")]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("RectangleShape2D_1xvig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b64xe")
disabled = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pa6rk")

[node name="SelectSprite" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_rnmax")
position = Vector2(0, 5)
sprite_frames = SubResource("SpriteFrames_bumg2")
animation = &"select"

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_24vj4")
sprite_frames = SubResource("SpriteFrames_swex3")
animation = &"new_animation_1"
autoplay = "default"

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 2.0
blend_mode = 2
texture = ExtResource("5_ax1vy")
texture_scale = 30.0

[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
[connection signal="animation_finished" from="SelectSprite" to="." method="_on_select_sprite_animation_finished"]

[editable path="Hitbox"]
